Changelog for Writer2LaTeX version 0.5 -> 1.0

---------- version 1.0 final ----------

[all] Added Brazilian Portuguese translation from Henrique

[all] Added Czech translation from Jindřich Marek

[w2l] Bugfix: Fixed crash when using the option external_bibtex_files

[w2l] Use \centering, \raggedleft and \raggedright rather than the corresponding
  environment in floats (to avoid the extra glue)

[all] Added updated Italian translation from Stefano Tombolini

[all] Added Polish translation from Dariusz Bismor

---------- version 1.0 beta3 ----------

[all] Added Turkish translation from Ferhat Nutku

[all] Added Italian translation from Stefano Tombolini

[w2l] Bugfix: Removed unwanted \hfill from one-line formulas starting with text

[w2x] Bugfix: Fixed another typo in description.xml

---------- version 1.0 beta2 ----------

[all] Bugfix: Paragraphs containing only fields are no longer lost

[all] Buildfile is adapted to work with separated ure and office (OOo 3.0+)

[all] Bugfix: Corrected path to descriptions in oxt

[w2x] Bugfix: Corrected typo in german translation of navigation bar

---------- version 1.0 beta ----------

[w2x] Added german translation from Raphael Fetzer

[w2x] Do not export character formatting in toc

[w2l] Bugfix: Added missing hyperlink targets for frames and graphics

[w2x] Bugfix: Fixed null pointer exception for text frames without height attribute

[w2l] Added spanish translation from Emilio José Juárez Pérez

[w2l] Added support for bitmap graphics with backend=dvips

[all] No longer create source distribution (SourceForge provides tarballs generated
  directly from SVN)

[all] Added german description to filters

[w2l] Bugfix: Fixed crash for tables with fewer columns than rows

---------- version 0.9.4 -----------

[w2l] Added sample LaTeX configuration for Google Docs from Elefterios Stamatogiannakis

[w2x] Added MathML named entites table from Bruno Mascret
